force-app/main/default/objects/Demand_Funnel__c/Demand_Funnel__c.object-meta.xml
<CustomObject>
    <label>Demand Funnel</label>
    <nameField>
        <displayFormat>DFR-{0000000}</displayFormat>
        <label>Demand Funnel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Funnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>