force-app/main/default/objects/Demand_Funnel__c/fields/Campaign_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Most_Recent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign - Most Recent</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Demand Funnel (Campaign - Most Recent)</relationshipLabel>
    <relationshipName>Demand_Funnel7</relationshipName>
    <type>Lookup</type>
</CustomField>