force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_Ad_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Ad_Group_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - Ad Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>