force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_Channel__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>