force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_Date_Exited__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Date_Exited__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - Date Exited</label>
    <type>DateTime</type>
</CustomField>