force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_OID__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_OID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - OID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>