force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_Placement__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Placement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>