force-app/main/default/objects/Demand_Funnel__c/fields/Inquiry_UTM_Medium_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_UTM_Medium_Most_Recent__c</fullName>
    <description>Will be populated from Lead/Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry - UTM Medium - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>