force-app/main/default/objects/Demand_Funnel__c/fields/MQL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MQL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MQL - Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Demand Funnel (MQL - Campaign)</relationshipLabel>
    <relationshipName>Demand_Funnel2</relationshipName>
    <type>Lookup</type>
</CustomField>