force-app/main/default/objects/Demand_Funnel__c/fields/MQL_Gclid__c.field-meta.xml
<CustomField>
    <fullName>MQL_Gclid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - Gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>