force-app/main/default/objects/Demand_Funnel__c/fields/MQL_Keywords__c.field-meta.xml
<CustomField>
    <fullName>MQL_Keywords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - Keywords</label>
    <type>TextArea</type>
</CustomField>