force-app/main/default/objects/Demand_Funnel__c/fields/MQL_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>MQL_Lead_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - Lead Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>