force-app/main/default/objects/Demand_Funnel__c/fields/MQL_UTM_content__c.field-meta.xml
<CustomField>
    <fullName>MQL_UTM_content__c</fullName>
    <description>Will be populated from MCT</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - UTM_content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>