force-app/main/default/objects/Demand_Funnel__c/fields/SQO_Entered_From__c.field-meta.xml
<CustomField>
    <fullName>SQO_Entered_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SQO - Entered From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>