force-app/main/default/objects/Demand_Funnel__c/fields/SQO_UTM_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>SQO_UTM_Source_Most_Recent__c</fullName>
    <description>Will be populated from Lead/Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SQO - UTM Source - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>