force-app/main/default/objects/Demand_Funnel__c/fields/Suspect_Network__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspect - Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>