force-app/main/default/objects/Demand_Funnel__c/fields/Suspect_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Stage_Duration__c</fullName>
    <formula>Suspect_Date_Exited__c -  Suspect_Date_Entered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspect - Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>