force-app/main/default/objects/Demand_Funnel__c/fields/TAL_Offer__c.field-meta.xml
<CustomField>
    <fullName>TAL_Offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAL - Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>