force-app/main/default/objects/Demand_Funnel__c/fields/TAL_UTM_Content_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>TAL_UTM_Content_Most_Recent__c</fullName>
    <description>Will be populated from Lead/Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TAL - UTM Content - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>