force-app/main/default/objects/Demand_Funnel__c/fields/TQO_Campaign__c.field-meta.xml
<CustomField>
    <fullName>TQO_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TQO - Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Demand Funnel (TQO - Campaign)</relationshipLabel>
    <relationshipName>Demand_Funnel4</relationshipName>
    <type>Lookup</type>
</CustomField>