force-app/main/default/objects/Demand_Funnel__c/fields/TQO_Offer__c.field-meta.xml
<CustomField>
    <fullName>TQO_Offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TQO - Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>