force-app/main/default/objects/Demand_Funnel__c/fields/TQO_UTM_Campaign_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>TQO_UTM_Campaign_Most_Recent__c</fullName>
    <description>Will be populated from Lead/Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TQO - UTM Campaign - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>