force-app/main/default/objects/Demand_Funnel__c/listViews/Entered_EOL.listView-meta.xml
<ListView>
    <fullName>Entered_EOL</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Current_Funnel_Status_Formula__c</columns>
    <columns>Lead__c</columns>
    <columns>EOL_Date_Entered__c</columns>
    <columns>EOL_Entered_From__c</columns>
    <columns>EOL_Reason__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <filters>
        <field>EOL_Date_Entered__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Current_Funnel_Status_Formula__c</field>
        <operation>notEqual</operation>
        <value>8 - Closed Won</value>
    </filters>
    <label>Entered EOL</label>
</ListView>